replaced .toList() with .collect(Collectors.toList())